# snow

./: Cargo.toml  LICENSE
crates/snowv/: Cargo.toml  README.md
crates/snowv/benches/: lib.rs
crates/snowv/src/: gcm.rs  lib.rs  rust_crypto.rs  stream.rs
crates/snowv/src/backend/: aarch64.rs  generic.rs  mod.rs  soft.rs  x86.rs
crates/snowv/src/backend/generic/: aes32.rs  aes64.rs  mod.rs
crates/snowvgcm/: Cargo.toml  README.md
crates/snowvgcm/src/: gcm.rs  lib.rs  rust_crypto.rs
