[workspace]
resolver = "2"

members = ["crates/*"]

default-members = ["crates/*"]

[workspace.package]
authors = ["Eric Lagergren"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/ericlagergren/gcm-sst"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
arithmetic_side_effects = "warn"
cast_lossless = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
expect_used = "warn"
implicit_saturating_sub = "warn"
indexing_slicing = "warn"
missing_panics_doc = "warn"
panic = "warn"
ptr_as_ptr = "warn"
string_slice = "warn"
transmute_ptr_to_ptr = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"

[workspace.dependencies]
aead = { version = "0.5", default-features = false }
aes = { version = "0.8", default-features = false }
cfg-if = { version = "1", default-features = false }
cipher = { version = "0.4", default-features = false }
ctr = { version = "0.9", default-features = false }
generic-array = { version = "1", default-features = false }
inout = { version = "0.1", default-features = false }
no-panic = { version = "0.1", default-features = false }
subtle = { version = "2.5", default-features = false, features = ["core_hint_black_box"] }
typenum = { version = "1", default-features = false }
zeroize = { version = "1.8", default-features = false }

# Dev
criterion = { version = "0.5" }
pprof = { version = "0.12", features = ["criterion", "flamegraph", "protobuf-codec"] }
